--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-							<h1>Jane Doe</h1>
-							<p>Senior Psychonautics Engineer</p>
+							<h1>Lei Shu</h1>
+							<p>University of Illinois at Chicago</p>
 						</header>
 						<!--
 						<hr />
@@ -90,7 +90,3 @@
 
 	</body>
 </html>
-=======
-<h1>Lei Shu</h1>
-<h2>University of Illinois at Chicago</h2>
->>>>>>> 6934e4a1c6ef6aefc029effb76344cb37e4d4f0b
