--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+j<!DOCTYPE HTML>
 <!--
 	Identity by HTML5 UP
 	html5up.net | @ajlkn
@@ -20,7 +20,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="avatar"><img src="images/emoji.png" alt="" /></span>
 							<h1>Lei Shu</h1>
 							<p>University of Illinois at Chicago</p>
 						</header>
