--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@ j<!DOCTYPE HTML>
 
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="fa-twitter">Twitter</a></li>
-								<li><a href="#" class="fa-instagram">Instagram</a></li>
-								<li><a href="#" class="fa-facebook">Facebook</a></li>
+								<li><a href="#" class="fa-google">Google</a></li>
+								<li><a href="#" class="fa-linkedin">linkedin</a></li>
+								<li><a href="#" class="fa-github">Github</a></li>
 							</ul>
 						</footer>
 					</section>
