--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@ j<!DOCTYPE HTML>
 
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="fa-google">Google</a></li>
-								<li><a href="#" class="fa-linkedin">linkedin</a></li>
-								<li><a href="#" class="fa-github">Github</a></li>
+								<li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="fa-google">Google</a></li>
+								<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="fa-linkedin">Linkedin</a></li>
+								<li><a href="https://github.com/leishu02" class="fa-github">Github</a></li>
 							</ul>
 						</footer>
 					</section>
