--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-j<!DOCTYPE HTML>
-<!--
-	Identity by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!DOCTYPE HTML>
 <html>
 	<head>
 		<title>Identity by HTML5 UP</title>
@@ -26,6 +21,11 @@ j<!DOCTYPE HTML>
 						</header>
 
 						<footer>
+							<dl class="alt">
+								<dt>Lei Shu</dt>
+								<dt>lshu3 AT uic.edu</dt>
+								
+							</dl>
 							<ul class="icons">
 								<li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="fa-google">Google</a></li>
 								<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="fa-linkedin">Linkedin</a></li>
