--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<dl class="alt">
-								<dt>Lei Shu</dt>
-								<dt>lshu3 AT uic.edu</dt>
+								<dd>Email: lshu3 AT uic.edu</dt>
 								
 						</dl>
 						<ul class="copyright">
