--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-
-
+				<!-- Main -->
+					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/emoji.png" alt="" /></span>
+							<!--<span class="avatar"><img src="images/emoji.png" alt="" /></span>-->
 							<h1>Lei Shu</h1>
 							<p>University of Illinois at Chicago</p>
 						</header>
@@ -26,8 +26,21 @@
 								<li><a href="https://github.com/leishu02" class="fa-github">Github</a></li>
 							</ul>
 						</footer>
-				<!-- Main -->
-					<section id="main">
+						
+												<!-- Introduction -->
+							<section id="intro" class="main">
+								<div class="spotlight">
+									<div class="content">
+										<header class="major">
+											<h2>Ipsum sed adipiscing</h2>
+										</header>
+										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
+										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
+										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+									</div>
+								</div>
+							</section>
+
 					</section>
 
 				<!-- Footer -->
