--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
+				<header>
+					<!--<span class="avatar"><img src="images/emoji.png" alt="" /></span>-->
+					<h1>Lei Shu</h1>
+					<p>University of Illinois at Chicago</p>
+				</header>
 				<!-- Main -->
 					<section id="main">
-						<header>
-							<!--<span class="avatar"><img src="images/emoji.png" alt="" /></span>-->
-							<h1>Lei Shu</h1>
-							<p>University of Illinois at Chicago</p>
-						</header>
+	
 
 						<footer>
+							<p>I am a 5th year Ph.D. student.</p>
 							<ul class="icons">
 								<li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="fa-google">Google</a></li>
 								<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="fa-linkedin">Linkedin</a></li>
@@ -32,11 +34,9 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Ipsum sed adipiscing</h2>
+											<h2>Publication</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>2019</p>
 									</div>
 								</div>
 							</section>
