--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/emoji.png" alt="" /></span>
+							<!--<span class="avatar"><img src="images/emoji.png" alt="" /></span>-->
 							<h1>Lei Shu</h1>
 							<p>University of Illinois at Chicago</p>
 						</header>
 
 						<footer>
-							<p>I am a 5th year Ph.D. student.</p>
+							<p>I am a 5th year Ph.D. student and expected to graduate by end of 2019. My CV is here.</p>
 							<ul class="icons">
 								<li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="fa-google">Google</a></li>
 								<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="fa-linkedin">Linkedin</a></li>
