--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						</header>
 
 						<footer>
-							<p>I am a 5th year Ph.D. student and expected to graduate by end of 2019. My CV is here.</p>
+							<p>I am a 5th year Ph.D. student and expected to graduate by end of 2019. I am on the job market. </p>
 							<ul class="icons">
 								<li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="fa-google">Google</a></li>
 								<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="fa-linkedin">Linkedin</a></li>
@@ -32,7 +32,7 @@
 												
 
 					</section>
-				
+					<!--
 					<section id="intro" class="main">
 						<div class="spotlight">
 							<div class="content">
@@ -43,6 +43,7 @@
 							</div>
 						</div>
 					</section>
+					-->
 
 				<!-- Footer -->
 					<footer id="footer">
