--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span class="icon major fa-cloud"></span>
+					<!--<span class="icon major fa-cloud"></span>-->
 					<h1><strong>Lei Shu</strong></h1>
 					<p>University of Illinois at Chicago</p>
-					<ul class="actions special">
+					<!--<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
 					</ul>
+					-->
 				</div>
 			</section>
 
@@ -32,10 +33,9 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
+								<h2>About Me</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p>
+							<p>I am a 5th year Ph.D. student in CS at UIC under Prof. Bing Liu's supervision. My research interests are sentiment analysis and dialogue systems.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
