--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
 
 		<!-- One -->
 			<section id="one" class="main style1">
-				<div class="container">
-					<div class="row gtr-150">
-						<div class="col-6 col-12-medium">
-							<header class="major">
-								<h2>About Me</h2>
-							</header>
-							<p>I am a 5th year Ph.D. student in CS at UIC under Prof. Bing Liu's supervision. My research interests are sentiment analysis and dialogue systems.</p>
-						</div>
-						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
-						</div>
-					</div>
+				<div class="container">	
+					<header class="major">
+						<h2>About Me</h2>
+					</header>
+					<p>I am a 5th year Ph.D. student in CS at UIC under Prof. Bing Liu's supervision. My research interests are dialogue systems, sentiment analysis and deep learning.
+					I am expected to graduate by the end of 2019 and currently on the job market. My CV is here. <p>
+					<ul class="icons">
+						<li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google</span></a></li>
+						<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>	
+						<li><a href="https://github.com/leishu02" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="lshu3@uic.edu" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
 				</div>
 			</section>
 
@@ -44,34 +44,12 @@
 			<section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
-						<h2>Adipiscing amet consequat</h2>
+						<h2>Publication</h2>
 					</header>
-					<p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
-					<div class="row gtr-150">
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
+					<p>2019</p>
+					
+
+						
 					</div>
 				</div>
 			</section>
@@ -80,9 +58,9 @@
 			<section id="four" class="main style2 special">
 				<div class="container">
 					<header class="major">
-						<h2>Ipsum feugiat consequat?</h2>
+						<h2>under developement</h2>
 					</header>
-					<p>Sed lacus nascetur ac ante amet sapien.</p>
+					<p>under developement</p>
 				</div>
 			</section>
 
