--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
 		<!-- One -->
 			<section id="one" class="main style1">
 				<div class="container">	
+					<!--
 					<header class="major">
 						<h2>About Me</h2>
 					</header>
-					<p>I am a 5th year Ph.D. student in CS at UIC under Prof. Bing Liu's supervision. My research interests are dialogue systems, sentiment analysis and deep learning.
+					-->
+					<p>I am a 5th year Ph.D. student in CS at UIC under Prof. <a href="https://www.cs.uic.edu/~liub/">Bing Liu's</a> supervision. My research interests are dialogue systems, sentiment analysis and deep learning.
 					I am expected to graduate by the end of 2019 and currently on the job market. My CV is here. <p>
 					<ul class="icons">
 						<li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google</span></a></li>
