--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
 						<h2>About Me</h2>
 					</header>
 					-->
-					<p>I am a 5th year Ph.D. student in CS at UIC under Prof. <a href="https://www.cs.uic.edu/~liub/">Bing Liu's</a> supervision. My research interests are dialogue systems, sentiment analysis and deep learning.
-					I am expected to graduate by the end of 2019 and currently on the job market. My CV is here. <p>
+					<p>I am a 5th year Ph.D. student in CS at UIC under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision. My research interests are dialogue systems, sentiment analysis and deep learning.
+					I am expected to graduate by the end of 2019 and currently on the job market. My latest CV is here. <p>
 					<ul class="icons">
 						<li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google</span></a></li>
 						<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>	
 						<li><a href="https://github.com/leishu02" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="lshu3@uic.edu" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 			</section>
@@ -386,11 +385,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 		<!-- Footer -->
 			<section id="footer">
+				<dd> Email: lshu3 AT uic.edu </dd>
 				<ul class="icons">
 					<li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google</span></a></li>
 					<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>	
 					<li><a href="https://github.com/leishu02" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="lshu3@uic.edu" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Lei Shu</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
