--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Lei Shu</title>
+		<title>Lei Shu's homepage</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,13 +25,11 @@
 		<!-- One -->
 			<section id="one" class="main style1">
 				<div class="container">	
-					<!--
 					<header class="major">
 						<h2>About Me</h2>
 					</header>
-					-->
-					<p>I am a 5th year Ph.D. student in CS at UIC under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision. My research interests are dialogue systems, sentiment analysis and deep learning.
-					I am expected to graduate by the end of 2019 and currently on the job market. My latest CV is here. <p>
+					<p>I am a 5th year Ph.D. student in CS at UIC under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision. My research interests are dialogue systems, sentiment analysis and deep learning.<p>
+					<p>I am expected to graduate by the end of 2019 and currently on the job market. My latest CV is here. <p>
 					<ul class="icons">
 						<li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google</span></a></li>
 						<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>	
