--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 					<header class="major">
 						<h2>About Me</h2>
 					</header>
-					<p>I am a 5th year Ph.D. student in CS at UIC under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision. My research interests are dialogue systems, sentiment analysis and deep learning.<p>
-					<p>I am expected to graduate by the end of 2019 and currently on the job market. My latest CV is here. <p>
+					<p>I am a 5th year Ph.D. student in CS at UIC under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision.
+					My research interests are dialogue system, sentiment analysis, and deep learning. 
+					I am expected to graduate by the end of 2019 and currently on the job market. My latest CV is here. <p>
 					<ul class="icons">
 						<li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google</span></a></li>
 						<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>	
@@ -46,6 +47,14 @@
 						<h2>Publication</h2>
 					</header>
 					<p>2019</p>
+					<ol>
+						<li>p1</li>
+						<li>p2</li>
+						<li>p3</li>
+						<li>p4</li>
+						<li>p5</li>
+						<li>p6</li>
+					</ol>
 					
 
 						
