--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					</header>
 					<p>I am a 5th year Ph.D. student in CS at UIC under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision.
 					My research interests are dialogue system, sentiment analysis, and deep learning. 
-					I am expected to graduate by the end of 2019 and currently on the job market. My latest CV is here. <p>
+					I am expected to graduate by the end of 2019 and currently <bold>on the job market</bold>. My latest CV is here. <p>
 					<ul class="icons">
 						<li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google</span></a></li>
 						<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>	
