--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<header>
 						<h3>About Me</h3>
 					</header>
-					<p>I am a 5th year Ph.D. student in CS at UIC under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision.
+					<p>I am a 5th year Ph.D. student in <a href="https://cs.uic.edu/">Computer Science at UIC</a> under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision.
 					My research interests are dialogue system, sentiment analysis, and deep learning. 
 					I am expected to graduate by the end of 2019 and currently <b>on the job market</b>. My latest CV is here. <p>
 					<ul class="icons">
