--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
 				<div class="inner">
 					<!--<span class="icon major fa-cloud"></span>-->
 					<h1><strong>Lei Shu</strong></h1>
+					<dd> Email: lshu3 AT uic.edu </dd>
 					<p>University of Illinois at Chicago</p>
+					<ul class="icons">
+						<li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google</span></a></li>
+						<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>	
+						<li><a href="https://github.com/leishu02" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+					</ul>
+
 					<!--<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
 					</ul>
@@ -31,11 +38,6 @@
 					<p>I am a 5th year Ph.D. student in <a href="https://cs.uic.edu/">Computer Science at UIC</a> under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision.
 					My research interests are dialogue system, sentiment analysis, and deep learning. 
 					I am expected to graduate by the end of 2019 and currently <b>on the job market</b>. My latest CV is here. <p>
-					<ul class="icons">
-						<li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google</span></a></li>
-						<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>	
-						<li><a href="https://github.com/leishu02" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-					</ul>
 
 					<header>
 						<h3>Publication</h3>
