--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<div class="inner">
 					<!--<span class="icon major fa-cloud"></span>-->
 					<h1><strong>Lei Shu</strong></h1>
-					<p>University of Illinois at Chicago</p>
+					<dd>University of Illinois at Chicago</dd>
 					<ul class="icons">
 						<li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google</span></a></li>
 						<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>	
