--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					</header>
 					<p>I am a 5th year Ph.D. student in <a href="https://cs.uic.edu/">Computer Science at University of Illinois at Chicago</a> under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision.
 					<!--My research interests are dialogue system, sentiment analysis, and deep learning. -->
-					I am expected to graduate by the end of 2019 and currently <b>on the job market</b>. My latest CV is here. <p>			
+					I am expected to graduate by the end of 2019 and currently <b>on the job market</b>. My latest resume is here. <p>			
 					</div>
 				</div>
 			</section>
@@ -47,8 +47,7 @@
 					<header>
 						<h3>Publication</h3>
 					</header>
-					<p>2019</p>
-					<ul>
+					<ul class ="">
 						<li>p1</li>
 						<li>p2</li>
 						<li>p3</li>
@@ -70,7 +69,7 @@
 				</ul>
 				<dd> Email: lshu3@uic.edu </dd>
 				<ul class="copyright">
-					<li>&copy; Lei Shu</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Lei Shu</li><li>Design: HTML5 UP</li>
 				</ul>
 			</section>
 
