--- a/index.html
+++ b/index.html
@@ -47,13 +47,67 @@
 					<header>
 						<h3>Publication</h3>
 					</header>
-					<ul class ="">
-						<li>p1</li>
-						<li>p2</li>
-						<li>p3</li>
-						<li>p4</li>
-						<li>p5</li>
-						<li>p6</li>
+					<ul class ="alt">
+						<li><strong>BERT Post-Training for Review Reading Comprehension and Aspect-based Sentiment Analysis
+							</strong><br>
+					2019 Annual Conference of the North American Chapter of the Association for Computational Linguistics (<b>NAACL 2019</b>)<br>
+						Hu Xu, Bing Liu, <b>Lei Shu</b>, Philip S. Yu<br>
+						[<a href="https://arxiv.org/abs/1904.02232">arXiv</a>][<a href="https://github.com/howardhsu/BERT-for-RRC-ABSA">code</a>]						
+						</li>
+
+						<li><strong>Open-world Learning and Application to Product Classification</strong><br>
+							The Web Conference (<b>WWW 2019</b>)<br>
+							Hu Xu, Bing Liu, <b>Lei Shu</b>, P. Yu<br>
+						[<a href="https://arxiv.org/abs/1809.06004">arXiv</a>][<a href="https://github.com/howardhsu/Meta-Open-World-Learning">code</a>]
+						</li>
+
+						<li><strong>Incorporating the Structure of the Belief State in End-to-End Task-Oriented Dialogue Systems</strong><br>
+							NeurIPS 2018 Conversational AI Workshop<br>
+							<b>Lei Shu</b>, Piero Molino, Mahdi Namazifar, Bing Liu, Hu Xu, Huaixiu Zheng, Gokhan Tur<br>
+						[<a href="http://alborz-geramifard.com/workshops/nips18-Conversational-AI/Papers/18convai-Incorporating%20the%20Structure.pdf">paper</a>]<!--[<a href="">bib</a>]-->
+						</li>
+
+						<li><strong>Double Embeddings and CNN-based Sequence Labeling for Aspect Extraction</strong><br>
+							the 56th Annual Meeting of the Association for Computational Linguistics (<b>ACL 2018</b>)<br>
+							Hu Xu, Bing Liu, <b>Lei Shu</b>, Philip S. Yu<br>
+						[<a href="https://aclweb.org/anthology/P18-2094">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:wZoRNgeRGmoJ:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfEuzAOsi5PTuK1plnJSbERWaFjFYse&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://github.com/howardhsu/DE-CNN">code</a>][<a href="https://drive.google.com/file/d/12Pj5LkKnE_XQKIRABiviqgspA5DB1Zfn/view">domain embedding</a>]
+						</li>
+
+						<li><strong>Lifelong Domain Word Embedding via Meta-Learning</strong><br>
+							International Joint Conference on Artificial Intelligence (<b>IJCAI 2018</b>)<br>
+							Hu Xu, Bing Liu, <b>Lei Shu</b>, Philip S. Yu<br>
+						[<a href="https://www.ijcai.org/proceedings/2018/0627.pdf">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:mUaf1p5oyM4J:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfDqBGFSoZRTd19fwR_uYobluvwiSvA&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://www.cs.uic.edu/~hxu/ijcai_final.pdf">slides</a>][<a href="https://github.com/howardhsu/L-DEM">code</a>]
+						</li>
+
+						<li><strong>Dual Attention Network for Product Compatibility and Function Satisfiability Analysis</strong><br>
+							AAAI Conference on Artificial Intelligence (<b>AAAI 2018</b>)<br>
+							Hu Xu, Sihong Xie, <b>Lei Shu</b>, Philip S. Yu<br>
+						[<a href="https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/17294/16169">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:PbrFRkP5d3QJ:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfF_fxpE_eqXryBKODLOcgP71niKzxW&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://www.cs.uic.edu/~hxu/aaai2018_slides.pdf">slides</a>][<a href="https://www.cs.uic.edu/~hxu/QA_dataset.html">dataset</a>]
+						</li>
+
+						<li><strong> </strong><br>
+							<br>
+							<br>
+						[<a href="">arXiv</a>][<a href="">code</a>]
+						</li>
+
+						<li><strong> </strong><br>
+							<br>
+							<br>
+						[<a href="">arXiv</a>][<a href="">code</a>]
+						</li>
+
+						<li><strong> </strong><br>
+							<br>
+							<br>
+						[<a href="">arXiv</a>][<a href="">code</a>]
+						</li>
+
+						<li><strong> </strong><br>
+							<br>
+							<br>
+						[<a href="">arXiv</a>][<a href="">code</a>]
+						</li>
 					</ul>
 				</div>
 			</section>
