--- a/index.html
+++ b/index.html
@@ -45,68 +45,67 @@
 			<section id="two" class="main style2">
 				<div class="container">
 					<header>
-						<h3>Publication</h3>
+						<h3>Selected Papers</h3>
 					</header>
 					<ul class ="alt">
 						<li><strong>BERT Post-Training for Review Reading Comprehension and Aspect-based Sentiment Analysis
 							</strong><br>
-					2019 Annual Conference of the North American Chapter of the Association for Computational Linguistics (<b>NAACL 2019</b>)<br>
+						NAACL 2019<br>
 						Hu Xu, Bing Liu, <b>Lei Shu</b>, Philip S. Yu<br>
-						[<a href="https://arxiv.org/abs/1904.02232">arXiv</a>][<a href="https://github.com/howardhsu/BERT-for-RRC-ABSA">code</a>]						
+						<small>[<a href="https://arxiv.org/abs/1904.02232">arXiv</a>][<a href="https://github.com/howardhsu/BERT-for-RRC-ABSA">code</a>]</small>						
 						</li>
 
 						<li><strong>Open-world Learning and Application to Product Classification</strong><br>
-							The Web Conference (<b>WWW 2019</b>)<br>
+							WWW 2019<br>
 							Hu Xu, Bing Liu, <b>Lei Shu</b>, P. Yu<br>
-						[<a href="https://arxiv.org/abs/1809.06004">arXiv</a>][<a href="https://github.com/howardhsu/Meta-Open-World-Learning">code</a>]
+						<small>[<a href="https://arxiv.org/abs/1809.06004">arXiv</a>][<a href="https://github.com/howardhsu/Meta-Open-World-Learning">code</a>]</small>
 						</li>
 
 						<li><strong>Incorporating the Structure of the Belief State in End-to-End Task-Oriented Dialogue Systems</strong><br>
 							NeurIPS 2018 Conversational AI Workshop<br>
 							<b>Lei Shu</b>, Piero Molino, Mahdi Namazifar, Bing Liu, Hu Xu, Huaixiu Zheng, Gokhan Tur<br>
-						[<a href="http://alborz-geramifard.com/workshops/nips18-Conversational-AI/Papers/18convai-Incorporating%20the%20Structure.pdf">paper</a>]<!--[<a href="">bib</a>]-->
+						<small>[<a href="http://alborz-geramifard.com/workshops/nips18-Conversational-AI/Papers/18convai-Incorporating%20the%20Structure.pdf">paper</a>]<!--[<a href="">bib</a>]--></small>
 						</li>
 
 						<li><strong>Double Embeddings and CNN-based Sequence Labeling for Aspect Extraction</strong><br>
-							the 56th Annual Meeting of the Association for Computational Linguistics (<b>ACL 2018</b>)<br>
+							ACL 2018<br>
 							Hu Xu, Bing Liu, <b>Lei Shu</b>, Philip S. Yu<br>
-						[<a href="https://aclweb.org/anthology/P18-2094">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:wZoRNgeRGmoJ:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfEuzAOsi5PTuK1plnJSbERWaFjFYse&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://github.com/howardhsu/DE-CNN">code</a>][<a href="https://drive.google.com/file/d/12Pj5LkKnE_XQKIRABiviqgspA5DB1Zfn/view">domain embedding</a>]
+						<small>[<a href="https://aclweb.org/anthology/P18-2094">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:wZoRNgeRGmoJ:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfEuzAOsi5PTuK1plnJSbERWaFjFYse&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://drive.google.com/file/d/12Pj5LkKnE_XQKIRABiviqgspA5DB1Zfn/view">domain embedding</a>][<a href="https://github.com/howardhsu/DE-CNN">code</a>]</small>
 						</li>
 
 						<li><strong>Lifelong Domain Word Embedding via Meta-Learning</strong><br>
-							International Joint Conference on Artificial Intelligence (<b>IJCAI 2018</b>)<br>
+							IJCAI 2018<br>
 							Hu Xu, Bing Liu, <b>Lei Shu</b>, Philip S. Yu<br>
-						[<a href="https://www.ijcai.org/proceedings/2018/0627.pdf">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:mUaf1p5oyM4J:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfDqBGFSoZRTd19fwR_uYobluvwiSvA&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://www.cs.uic.edu/~hxu/ijcai_final.pdf">slides</a>][<a href="https://github.com/howardhsu/L-DEM">code</a>]
+						<small>[<a href="https://www.ijcai.org/proceedings/2018/0627.pdf">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:mUaf1p5oyM4J:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfDqBGFSoZRTd19fwR_uYobluvwiSvA&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://www.cs.uic.edu/~hxu/ijcai_final.pdf">slides</a>][<a href="https://github.com/howardhsu/L-DEM">code</a>]</small>
 						</li>
 
 						<li><strong>Dual Attention Network for Product Compatibility and Function Satisfiability Analysis</strong><br>
-							AAAI Conference on Artificial Intelligence (<b>AAAI 2018</b>)<br>
+							AAAI 2018<br>
 							Hu Xu, Sihong Xie, <b>Lei Shu</b>, Philip S. Yu<br>
-						[<a href="https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/17294/16169">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:PbrFRkP5d3QJ:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfF_fxpE_eqXryBKODLOcgP71niKzxW&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://www.cs.uic.edu/~hxu/aaai2018_slides.pdf">slides</a>][<a href="https://www.cs.uic.edu/~hxu/QA_dataset.html">dataset</a>]
+						<small>[<a href="https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/17294/16169">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:PbrFRkP5d3QJ:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfF_fxpE_eqXryBKODLOcgP71niKzxW&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://www.cs.uic.edu/~hxu/aaai2018_slides.pdf">slides</a>][<a href="https://www.cs.uic.edu/~hxu/QA_dataset.html">dataset</a>]</small>
 						</li>
 
-						<li><strong> </strong><br>
-							<br>
-							<br>
-						[<a href="">arXiv</a>][<a href="">code</a>]
+						<li><strong>Unseen Class Discovery in Open-world Classification</strong><br>
+							<b>Lei Shu</b>, Hu Xu, Bing Liu<br>
+						<small>[<a href="https://arxiv.org/abs/1801.05609">arXiv</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:8HlC8uz2l0cJ:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfNTnGnnUGHPD53XAKssK-681ODx5xs&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>]</small>
 						</li>
 
-						<li><strong> </strong><br>
-							<br>
-							<br>
-						[<a href="">arXiv</a>][<a href="">code</a>]
+						<li><strong>DOC: Deep Open Classification of Text Documents</strong><br>
+							EMNLP 2017<br>
+							<b>Lei Shu</b>, Hu Xu, Bing Liu<br>
+						<small>[<a href="https://www.aclweb.org/anthology/D17-1314">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:Y6WTIEGBIJoJ:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfOEhNFj8x69sFp0cNPZrp6ycowqoo8&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://www.youtube.com/watch?v=g8sRvZNwkbE">video</a>]</small>
 						</li>
 
-						<li><strong> </strong><br>
-							<br>
-							<br>
-						[<a href="">arXiv</a>][<a href="">code</a>]
+						<li><strong>Lifelong Learning CRF for Supervised Aspect Extraction</strong><br>
+							ACL 2017<br>
+							<b>Lei Shu</b>, Hu Xu, Bing Liu<br>
+						[<a href="https://www.aclweb.org/anthology/P17-2023">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:5gJM_mU-bSkJ:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfPq8vAmplPW2fUChDexGO3B9b9g8lN&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://vimeo.com/234956125">video</a>]
 						</li>
 
-						<li><strong> </strong><br>
-							<br>
-							<br>
-						[<a href="">arXiv</a>][<a href="">code</a>]
+						<li><strong>Lifelong-RL: Lifelong Relaxation Labeling for Separating Entities and Aspects in Opinion Targets</strong><br>
+							EMNLP 2016<br>
+							<b>Lei Shu</b>, Bing Liu, Hu Xu, Annice Kim<br>
+						[<a href="https://www.aclweb.org/anthology/D16-1022">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:GAIVt6ukG5gJ:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfQbL7dR553K3C_-d1w0sRmCIWkSzKQ&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://vimeo.com/239244227">video</a>]
 						</li>
 					</ul>
 				</div>
