--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 				<div class="inner">
 					<!--<span class="icon major fa-cloud"></span>-->
 					<h1><strong>Lei Shu</strong></h1>
-					<dd>Dialogue System, Sentiment Analysis, Deep Learning, Meta Learning, Continual Learning, Reinforcement Learning</dd>
+					<dd>Dialogue System, Sentiment Analysis, Deep Learning, Meta Learning, Lifelong Learning, Reinforcement Learning</dd>
 					<ul class="icons">
 						<li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google</span></a></li>
 						<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>	
+						<li><a href="https://www.youtube.com/channel/UCbIYHHiFF0JNPTbVT5YsnZQ?view_as=subscriber" class="icon alt fa-youtube"><span class="label">Youtube</span></a></li>
 						<li><a href="https://github.com/leishu02" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 					</ul>
 
@@ -45,7 +46,7 @@
 			<section id="two" class="main style2">
 				<div class="container">
 					<header>
-						<h3>Selected Papers</h3>
+						<h3>Selected Papers (<a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en">full list</a>)</h3>
 					</header>
 					<ul class ="alt">
 						<li><strong>BERT Post-Training for Review Reading Comprehension and Aspect-based Sentiment Analysis
@@ -99,13 +100,19 @@
 						<li><strong>Lifelong Learning CRF for Supervised Aspect Extraction</strong><br>
 							ACL 2017<br>
 							<b>Lei Shu</b>, Hu Xu, Bing Liu<br>
-						[<a href="https://www.aclweb.org/anthology/P17-2023">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:5gJM_mU-bSkJ:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfPq8vAmplPW2fUChDexGO3B9b9g8lN&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://vimeo.com/234956125">video</a>]
+						<small>[<a href="https://www.aclweb.org/anthology/P17-2023">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:5gJM_mU-bSkJ:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfPq8vAmplPW2fUChDexGO3B9b9g8lN&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://vimeo.com/234956125">video</a>]</small>
 						</li>
 
 						<li><strong>Lifelong-RL: Lifelong Relaxation Labeling for Separating Entities and Aspects in Opinion Targets</strong><br>
 							EMNLP 2016<br>
 							<b>Lei Shu</b>, Bing Liu, Hu Xu, Annice Kim<br>
-						[<a href="https://www.aclweb.org/anthology/D16-1022">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:GAIVt6ukG5gJ:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfQbL7dR553K3C_-d1w0sRmCIWkSzKQ&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://vimeo.com/239244227">video</a>]
+						<small>[<a href="https://www.aclweb.org/anthology/D16-1022">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:GAIVt6ukG5gJ:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfQbL7dR553K3C_-d1w0sRmCIWkSzKQ&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://vimeo.com/239244227">video</a>]</small>
+						</li>
+
+						<li><strong>Lifelong-RL: Lifelong Relaxation Labeling for Separating Entities and Aspects in Opinion Targets</strong><br>
+							EMNLP 2016<br>
+							<b>Lei Shu</b>, Bing Liu, Hu Xu, Annice Kim<br>
+						<small>[<a href="https://www.aclweb.org/anthology/D16-1022">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:GAIVt6ukG5gJ:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfQbL7dR553K3C_-d1w0sRmCIWkSzKQ&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://vimeo.com/239244227">video</a>]</small>
 						</li>
 					</ul>
 				</div>
@@ -118,6 +125,7 @@
 				<ul class="icons">
 					<li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google</span></a></li>
 					<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>	
+					<li><a href="https://www.youtube.com/channel/UCbIYHHiFF0JNPTbVT5YsnZQ?view_as=subscriber" class="icon alt fa-youtube"><span class="label">Youtube</span></a></li>
 					<li><a href="https://github.com/leishu02" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 				</ul>
 				<dd> Email: lshu3@uic.edu </dd>
