--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					</header>
 					<p>I am a 5th year Ph.D. student in <a href="https://cs.uic.edu/">Computer Science at University of Illinois at Chicago</a> under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision.
 					<!--My research interests are dialogue system, sentiment analysis, and deep learning. -->
-					I am expected to graduate by the end of 2019 and currently <b>on the job market</b>. My latest resume is here. <p>			
+					I am expected to graduate by the end of 2019 and currently <b>on the job market</b>. <!--My latest resume is here.--> <p>			
 					</div>
 				</div>
 			</section>
@@ -71,49 +71,50 @@
 						<li><strong>Double Embeddings and CNN-based Sequence Labeling for Aspect Extraction</strong><br>
 							ACL 2018<br>
 							Hu Xu, Bing Liu, <b>Lei Shu</b>, Philip S. Yu<br>
-						<small>[<a href="https://aclweb.org/anthology/P18-2094">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:wZoRNgeRGmoJ:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfEuzAOsi5PTuK1plnJSbERWaFjFYse&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://drive.google.com/file/d/12Pj5LkKnE_XQKIRABiviqgspA5DB1Zfn/view">domain embedding</a>][<a href="https://github.com/howardhsu/DE-CNN">code</a>]</small>
+						<small>[<a href="https://aclweb.org/anthology/P18-2094">paper</a>][<a href="https://www.cs.uic.edu/~hxu/acl2018_bib.bib">bib</a>][<a href="https://drive.google.com/file/d/12Pj5LkKnE_XQKIRABiviqgspA5DB1Zfn/view">domain embedding</a>][<a href="https://github.com/howardhsu/DE-CNN">code</a>]</small>
 						</li>
 
 						<li><strong>Lifelong Domain Word Embedding via Meta-Learning</strong><br>
 							IJCAI 2018<br>
 							Hu Xu, Bing Liu, <b>Lei Shu</b>, Philip S. Yu<br>
-						<small>[<a href="https://www.ijcai.org/proceedings/2018/0627.pdf">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:mUaf1p5oyM4J:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfDqBGFSoZRTd19fwR_uYobluvwiSvA&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://www.cs.uic.edu/~hxu/ijcai_final.pdf">slides</a>][<a href="https://github.com/howardhsu/L-DEM">code</a>]</small>
+						<small>[<a href="https://www.ijcai.org/proceedings/2018/0627.pdf">paper</a>][<a href="https://www.cs.uic.edu/~hxu/ijcai2018_bib.bib">bib</a>][<a href="https://www.cs.uic.edu/~hxu/ijcai_final.pdf">slides</a>][<a href="https://github.com/howardhsu/L-DEM">code</a>]</small>
 						</li>
 
 						<li><strong>Dual Attention Network for Product Compatibility and Function Satisfiability Analysis</strong><br>
 							AAAI 2018<br>
 							Hu Xu, Sihong Xie, <b>Lei Shu</b>, Philip S. Yu<br>
-						<small>[<a href="https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/17294/16169">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:PbrFRkP5d3QJ:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfF_fxpE_eqXryBKODLOcgP71niKzxW&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://www.cs.uic.edu/~hxu/aaai2018_slides.pdf">slides</a>][<a href="https://www.cs.uic.edu/~hxu/QA_dataset.html">dataset</a>]</small>
+						<small>[<a href="https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/17294/16169">paper</a>][<a href="https://www.cs.uic.edu/~hxu/aaai2018_bib.bib">bib</a>][<a href="https://www.cs.uic.edu/~hxu/aaai2018_slides.pdf">slides</a>][<a href="https://www.cs.uic.edu/~hxu/QA_dataset.html">dataset</a>]</small>
 						</li>
 
 						<li><strong>Unseen Class Discovery in Open-world Classification</strong><br>
 							<b>Lei Shu</b>, Hu Xu, Bing Liu<br>
-						<small>[<a href="https://arxiv.org/abs/1801.05609">arXiv</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:8HlC8uz2l0cJ:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfNTnGnnUGHPD53XAKssK-681ODx5xs&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>]</small>
+						<small>[<a href="https://arxiv.org/abs/1801.05609">arXiv</a>][<a href="">bib</a>]</small>
 						</li>
 
 						<li><strong>DOC: Deep Open Classification of Text Documents</strong><br>
 							EMNLP 2017<br>
 							<b>Lei Shu</b>, Hu Xu, Bing Liu<br>
-						<small>[<a href="https://www.aclweb.org/anthology/D17-1314">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:Y6WTIEGBIJoJ:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfOEhNFj8x69sFp0cNPZrp6ycowqoo8&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://www.youtube.com/watch?v=g8sRvZNwkbE">video</a>]</small>
+						<small>[<a href="https://www.aclweb.org/anthology/D17-1314">paper</a>][<a href="">bib</a>][<a href="https://www.youtube.com/watch?v=g8sRvZNwkbE">video</a>]</small>
 						</li>
 
 						<li><strong>Lifelong Learning CRF for Supervised Aspect Extraction</strong><br>
 							ACL 2017<br>
 							<b>Lei Shu</b>, Hu Xu, Bing Liu<br>
-						<small>[<a href="https://www.aclweb.org/anthology/P17-2023">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:5gJM_mU-bSkJ:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfPq8vAmplPW2fUChDexGO3B9b9g8lN&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://vimeo.com/234956125">video</a>]</small>
+						<small>[<a href="https://www.aclweb.org/anthology/P17-2023">paper</a>][<a href="">bib</a>][<a href="https://vimeo.com/234956125">video</a>]</small>
 						</li>
 
 						<li><strong>Lifelong-RL: Lifelong Relaxation Labeling for Separating Entities and Aspects in Opinion Targets</strong><br>
 							EMNLP 2016<br>
 							<b>Lei Shu</b>, Bing Liu, Hu Xu, Annice Kim<br>
-						<small>[<a href="https://www.aclweb.org/anthology/D16-1022">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:GAIVt6ukG5gJ:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfQbL7dR553K3C_-d1w0sRmCIWkSzKQ&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://vimeo.com/239244227">video</a>]</small>
+						<small>[<a href="https://www.aclweb.org/anthology/D16-1022">paper</a>][<a href="">bib</a>][<a href="https://vimeo.com/239244227">video</a>]</small>
 						</li>
-
-						<li><strong>Lifelong-RL: Lifelong Relaxation Labeling for Separating Entities and Aspects in Opinion Targets</strong><br>
-							EMNLP 2016<br>
-							<b>Lei Shu</b>, Bing Liu, Hu Xu, Annice Kim<br>
-						<small>[<a href="https://www.aclweb.org/anthology/D16-1022">paper</a>][<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:GAIVt6ukG5gJ:scholar.google.com/&output=citation&scisig=AAGBfm0AAAAAXLfQbL7dR553K3C_-d1w0sRmCIWkSzKQ&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1">bib</a>][<a href="https://vimeo.com/239244227">video</a>]</small>
+						<!--
+						<li><strong></strong><br>
+							<br>
+							<br>
+						<small>[<a href="">paper</a>]</small>
 						</li>
+						-->
 					</ul>
 				</div>
 			</section>
