--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<section id="two" class="main style2">
 				<div class="container">
 					<header>
-						<h3>Selected Papers (<a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en">full list</a>)</h3>
+						<h3>Selected Papers (<a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en">Full List</a>)</h3>
 					</header>
 					<ul class ="alt">
 						<li><strong>BERT Post-Training for Review Reading Comprehension and Aspect-based Sentiment Analysis
