--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
 			<section id="header">
 				<div class="inner">
 					<!--<span class="icon major fa-cloud"></span>-->
+					<img class="img-circle" src = "images/emoji.png" alt = "Lei Shu's emoji" />
 					<h1><strong>Lei Shu</strong></h1>
-					<dd>Dialogue System, Sentiment Analysis, Deep Learning, Meta Learning, Lifelong Learning, Reinforcement Learning</dd>
+					<dt>Dialogue System, Sentiment Analysis, Deep Learning, Meta Learning, Lifelong Learning, Reinforcement Learning</dt>
 					<ul class="icons">
 						<li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google</span></a></li>
 						<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>	
 						<li><a href="https://www.youtube.com/channel/UCbIYHHiFF0JNPTbVT5YsnZQ?view_as=subscriber" class="icon alt fa-youtube"><span class="label">Youtube</span></a></li>
 						<li><a href="https://github.com/leishu02" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 					</ul>
-
-					<!--<ul class="actions special">
+					<!--
+					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
 					</ul>
 					-->
@@ -46,44 +47,38 @@
 			<section id="two" class="main style2">
 				<div class="container">
 					<header>
-						<h3>Selected Papers (<a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en">Full List</a>)</h3>
+						<h3>Selected Papers (<a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en">full list at Google Scholar</a>)</h3>
 					</header>
 					<ul class ="alt">
 						<li><strong>BERT Post-Training for Review Reading Comprehension and Aspect-based Sentiment Analysis
 							</strong><br>
-						NAACL 2019<br>
 						Hu Xu, Bing Liu, <b>Lei Shu</b>, Philip S. Yu<br>
-						<small>[<a href="https://arxiv.org/abs/1904.02232">arXiv</a>][<a href="https://github.com/howardhsu/BERT-for-RRC-ABSA">code</a>]</small>						
+						NAACL 2019 <small>[<a href="https://arxiv.org/abs/1904.02232">arXiv</a>][<a href="https://github.com/howardhsu/BERT-for-RRC-ABSA">code</a>]</small>						
 						</li>
 
 						<li><strong>Open-world Learning and Application to Product Classification</strong><br>
-							WWW 2019<br>
 							Hu Xu, Bing Liu, <b>Lei Shu</b>, P. Yu<br>
-						<small>[<a href="https://arxiv.org/abs/1809.06004">arXiv</a>][<a href="https://github.com/howardhsu/Meta-Open-World-Learning">code</a>]</small>
+						WWW 2019 <small>[<a href="https://arxiv.org/abs/1809.06004">arXiv</a>][<a href="https://github.com/howardhsu/Meta-Open-World-Learning">code</a>]</small>
 						</li>
 
 						<li><strong>Incorporating the Structure of the Belief State in End-to-End Task-Oriented Dialogue Systems</strong><br>
-							NeurIPS 2018 Conversational AI Workshop<br>
 							<b>Lei Shu</b>, Piero Molino, Mahdi Namazifar, Bing Liu, Hu Xu, Huaixiu Zheng, Gokhan Tur<br>
-						<small>[<a href="http://alborz-geramifard.com/workshops/nips18-Conversational-AI/Papers/18convai-Incorporating%20the%20Structure.pdf">paper</a>]<!--[<a href="">bib</a>]--></small>
+						NeurIPS 2018 Conversational AI Workshop <small>[<a href="http://alborz-geramifard.com/workshops/nips18-Conversational-AI/Papers/18convai-Incorporating%20the%20Structure.pdf">paper</a>]<!--[<a href="">bib</a>]--></small>
 						</li>
 
 						<li><strong>Double Embeddings and CNN-based Sequence Labeling for Aspect Extraction</strong><br>
-							ACL 2018<br>
 							Hu Xu, Bing Liu, <b>Lei Shu</b>, Philip S. Yu<br>
-						<small>[<a href="https://aclweb.org/anthology/P18-2094">paper</a>][<a href="https://www.cs.uic.edu/~hxu/acl2018_bib.bib">bib</a>][<a href="https://drive.google.com/file/d/12Pj5LkKnE_XQKIRABiviqgspA5DB1Zfn/view">domain embedding</a>][<a href="https://github.com/howardhsu/DE-CNN">code</a>]</small>
+						ACL 2018 <small>[<a href="https://aclweb.org/anthology/P18-2094">paper</a>][<a href="https://www.cs.uic.edu/~hxu/acl2018_bib.bib">bib</a>][<a href="https://drive.google.com/file/d/12Pj5LkKnE_XQKIRABiviqgspA5DB1Zfn/view">domain embedding</a>][<a href="https://github.com/howardhsu/DE-CNN">code</a>]</small>
 						</li>
 
 						<li><strong>Lifelong Domain Word Embedding via Meta-Learning</strong><br>
-							IJCAI 2018<br>
 							Hu Xu, Bing Liu, <b>Lei Shu</b>, Philip S. Yu<br>
-						<small>[<a href="https://www.ijcai.org/proceedings/2018/0627.pdf">paper</a>][<a href="https://www.cs.uic.edu/~hxu/ijcai2018_bib.bib">bib</a>][<a href="https://www.cs.uic.edu/~hxu/ijcai_final.pdf">slides</a>][<a href="https://github.com/howardhsu/L-DEM">code</a>]</small>
+						IJCAI 2018 <small>[<a href="https://www.ijcai.org/proceedings/2018/0627.pdf">paper</a>][<a href="https://www.cs.uic.edu/~hxu/ijcai2018_bib.bib">bib</a>][<a href="https://www.cs.uic.edu/~hxu/ijcai_final.pdf">slides</a>][<a href="https://github.com/howardhsu/L-DEM">code</a>]</small>
 						</li>
 
 						<li><strong>Dual Attention Network for Product Compatibility and Function Satisfiability Analysis</strong><br>
-							AAAI 2018<br>
 							Hu Xu, Sihong Xie, <b>Lei Shu</b>, Philip S. Yu<br>
-						<small>[<a href="https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/17294/16169">paper</a>][<a href="https://www.cs.uic.edu/~hxu/aaai2018_bib.bib">bib</a>][<a href="https://www.cs.uic.edu/~hxu/aaai2018_slides.pdf">slides</a>][<a href="https://www.cs.uic.edu/~hxu/QA_dataset.html">dataset</a>]</small>
+						AAAI 2018 <small>[<a href="https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/17294/16169">paper</a>][<a href="https://www.cs.uic.edu/~hxu/aaai2018_bib.bib">bib</a>][<a href="https://www.cs.uic.edu/~hxu/aaai2018_slides.pdf">slides</a>][<a href="https://www.cs.uic.edu/~hxu/QA_dataset.html">dataset</a>]</small>
 						</li>
 
 						<li><strong>Unseen Class Discovery in Open-world Classification</strong><br>
@@ -92,21 +87,18 @@
 						</li>
 
 						<li><strong>DOC: Deep Open Classification of Text Documents</strong><br>
-							EMNLP 2017<br>
 							<b>Lei Shu</b>, Hu Xu, Bing Liu<br>
-						<small>[<a href="https://www.aclweb.org/anthology/D17-1314">paper</a>][<a href="">bib</a>][<a href="https://www.youtube.com/watch?v=g8sRvZNwkbE">video</a>]</small>
+						EMNLP 2017 <small>[<a href="https://www.aclweb.org/anthology/D17-1314">paper</a>][<a href="">bib</a>][<a href="https://www.youtube.com/watch?v=g8sRvZNwkbE">video</a>]</small>
 						</li>
 
 						<li><strong>Lifelong Learning CRF for Supervised Aspect Extraction</strong><br>
-							ACL 2017<br>
 							<b>Lei Shu</b>, Hu Xu, Bing Liu<br>
-						<small>[<a href="https://www.aclweb.org/anthology/P17-2023">paper</a>][<a href="">bib</a>][<a href="https://vimeo.com/234956125">video</a>]</small>
+						ACL 2017 <small>[<a href="https://www.aclweb.org/anthology/P17-2023">paper</a>][<a href="">bib</a>][<a href="https://vimeo.com/234956125">video</a>]</small>
 						</li>
 
 						<li><strong>Lifelong-RL: Lifelong Relaxation Labeling for Separating Entities and Aspects in Opinion Targets</strong><br>
-							EMNLP 2016<br>
 							<b>Lei Shu</b>, Bing Liu, Hu Xu, Annice Kim<br>
-						<small>[<a href="https://www.aclweb.org/anthology/D16-1022">paper</a>][<a href="">bib</a>][<a href="https://vimeo.com/239244227">video</a>]</small>
+						EMNLP 2016 <small>[<a href="https://www.aclweb.org/anthology/D16-1022">paper</a>][<a href="">bib</a>][<a href="https://vimeo.com/239244227">video</a>]</small>
 						</li>
 						<!--
 						<li><strong></strong><br>
@@ -129,7 +121,7 @@
 					<li><a href="https://www.youtube.com/channel/UCbIYHHiFF0JNPTbVT5YsnZQ?view_as=subscriber" class="icon alt fa-youtube"><span class="label">Youtube</span></a></li>
 					<li><a href="https://github.com/leishu02" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 				</ul>
-				<dd> Email: lshu3@uic.edu </dd>
+				<!--<dd> Email: lshu3@uic.edu </dd>-->
 				<ul class="copyright">
 					<li>&copy; Lei Shu</li><li>Design: HTML5 UP</li>
 				</ul>
